Bug 432104 - stylus/pen input does not work on window decorations
Summary: stylus/pen input does not work on window decorations
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
: 445121 446371 (view as bug list)
Depends on:
Blocks: 445244
  Show dependency treegraph
 
Reported: 2021-01-25 16:32 UTC by Bernhard
Modified: 2021-12-02 21:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard 2021-01-25 16:32:19 UTC
SUMMARY
kwin seems to ignore any and all input events from a stylus on the window decorations, including click, drag or the 3rd mouse button

STEPS TO REPRODUCE
1. open wayland session
2. try to maximize/move a window

OBSERVED RESULT
nothing happens, the window is not even activated.

EXPECTED RESULT
windows can be moved, maximized, or closed.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
 
OS Type: 64-bit
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 15,1 GiB of RAM
Graphics Processor: AMD RENOIR

ADDITIONAL INFORMATION
Dragging firefox on its 'tab bar' drags the window without raising it
Comment 1 Fushan Wen 2021-11-07 15:18:08 UTC
*** Bug 445121 has been marked as a duplicate of this bug. ***
Comment 2 Fushan Wen 2021-11-07 15:46:43 UTC
In decoration.cpp and decorationbutton.cpp, event function does not handle the stylus input.
Comment 3 Fushan Wen 2021-11-08 15:23:45 UTC
In input.cpp, DecorationEventFilter does not handle tablet events.
Comment 4 Bug Janitor Service 2021-11-09 15:38:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1627
Comment 5 Bug Janitor Service 2021-11-12 01:38:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1647
Comment 6 Fushan Wen 2021-11-23 04:32:15 UTC
Git commit 1719c9cc07608d8ca1829f8747ec4760fbaff81b by Fushan Wen.
Committed on 23/11/2021 at 00:50.
Pushed by fusionfuture into branch 'master'.

Enable using stylus to switch focus and operate on the decoration

Add `tabletToolEvent()` to DecorationEventFilter class so it can handle
tablet events.

Add `tabletToolEvent()` to MoveResizeFilter class to avoid incorrect
titlebar highlight after a window is resized by using a stylus.

Add `tabletToolEvent()` to WindowActionInputFilter class so window focus
can be changed by clicking on the window content area when using a stylus.

Add `update()` to `TabletInputRedirection::tabletToolEvent()` to enable
switching window focus by using a stylus.

M  +78   -0    src/input.cpp
M  +158  -7    src/tablet_input.cpp
M  +12   -1    src/tablet_input.h

https://invent.kde.org/plasma/kwin/commit/1719c9cc07608d8ca1829f8747ec4760fbaff81b
Comment 7 Nate Graham 2021-12-02 21:13:58 UTC
*** Bug 446371 has been marked as a duplicate of this bug. ***