src/tablet_input.h
@@ -16,6 +16,11 @@
 #include <QPointF>
 #include <QPointer>
 
+namespace KWaylandServer
+{
+class SurfaceInterface;
+}
+
 namespace KWin
 {
 class Toplevel;
@@ -39,6 +44,7 @@ public:
     ~TabletInputRedirection() override;
 
     void tabletPad();
+    bool focusUpdatesBlocked() override;
 
     void tabletToolEvent(KWin::InputRedirection::TabletEventType type, const QPointF &pos,
                          qreal pressure, int xTilt, int yTilt, qreal rotation, bool tipDown,
@@ -65,12 +71,17 @@ private:
     void cleanupDecoration(Decoration::DecoratedClientImpl *old,
                            Decoration::DecoratedClientImpl *now) override;
     void cleanupInternalWindow(QWindow *old, QWindow *now) override;
-    void focusUpdate(KWin::Toplevel *old, KWin::Toplevel *now) override;
+    void focusUpdate(Toplevel *focusOld, Toplevel *focusNow) override;
+    void warpXcbOnSurfaceLeft(KWaylandServer::SurfaceInterface *surface);
 
     bool m_tipDown = false;
     bool m_tipNear = false;
 
     QPointF m_lastPosition;
+    QMetaObject::Connection m_focusGeometryConnection;
+    QMetaObject::Connection m_internalWindowConnection;
+    QMetaObject::Connection m_decorationGeometryConnection;
+    QMetaObject::Connection m_decorationDestroyedConnection;
 };
 
 }
